PhotoDetails stopped overflowing and date button looks good on small screens
Also had an issues that a blue highlighting effect of the asteroid page would go off as i added a click event on the list div which I now turned off,

--- a/asteroidPage/asteroids.css
+++ b/asteroidPage/asteroids.css
@@ -83,10 +83,13 @@ li button, li a{
     margin: 5px;
     margin-left: 0;
     border-radius: 5px;
+    outline: none;
 }
-
+li button:active{
+    background-color: rgba(87, 85, 85, 0.493)
+}
 .dateHeader{
-    width: 100%;
+    
     position: sticky;
     top: 30px;
     background-color: rgb(42,42,42);
@@ -165,3 +168,12 @@ h1{
     left: 0%;
 }
 
+.noSelect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color:  transparent;
+}
