--- a/nasaPicturePage/indexStyles.css
+++ b/nasaPicturePage/indexStyles.css
@@ -56,7 +56,7 @@
     left:0%;
     height: 100%;
 }
-#group button, #photoDetails a{
+#group button, #photoDetails a, .modalButton{
     cursor: pointer;
     color: white;
     background-color: rgba(0, 0, 0, 0.39);
@@ -68,8 +68,12 @@
     margin: 5px;
     border-radius: 2px;
     display: block;
+    outline: none;
 }
-
+#group button:active, #photoDetails a:active,.modalButton:active, #tabs button:active{
+    
+    background-color:rgba(107, 107, 107, 0.39) ;
+}
 .linkDiv{
     text-align: center;
     height: fit-content;
@@ -112,7 +116,6 @@ form{
 #photoDetails{
     display:none;
     position: relative;
-    max-height:70vh;
     margin:0px;
     background-color: #1f4068;
 }
@@ -167,7 +170,6 @@ img{
     display: flex;
     justify-content: space-around;
     border-bottom: 1px solid white;
-    background-color: rgba(30, 30, 30, 0.945);
 } 
 
 nav{
@@ -175,7 +177,7 @@ nav{
     width: 100%;
     z-index: 1;
     top: 0%;
-    background-color: white;
+    background-color: rgba(30, 30, 30, 0.945);
 }
 #tabs  button, #tabs a, #tabs div{
     cursor:pointer;    
@@ -197,12 +199,12 @@ nav{
     margin: auto;
   }
 
-@media(max-width:1100px){
+@media(max-width:800px){
     #tabs  button, #tabs a, #tabs div{
         font-size:2vw;
     }
     #tabs input{
-        font-size: 1vw;
+        font-size: inherit;
     }
 }
 
@@ -213,4 +215,22 @@ nav{
 
 #nasaPhotoDate{
     text-align: center;
+}
+
+@media(max-width:500px){
+    #inputDate::-webkit-calendar-picker-indicator{
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        background: transparent;
+        cursor: pointer;
+    }
+    #inputDate{
+        position: relative;
+        display: block;
+        width: 100%;
+    }
+    .hidden{
+        display: none;
+    }
 }
